# Newtype-Kit

./: README.md  makefile  newtype.cabal
src/: Newtype.hs
test/: Test.hs
