cabal-version:      2.2
category:           Control
build-type:         Simple

name:               newtype-kit
version:            0.1.0

author:             Callan McGill
maintainer:         callan.mcgill@gmail.com
copyright:          2018
license:            BSD-3-Clause


extra-source-files:

Library

  hs-source-dirs:   src

  ghc-options:      -Wall

  build-depends:    base >=4.7 && <5
                  , profunctors
                  , transformers

  exposed-modules:  Newtype

  other-modules:

  default-language: Haskell2010


Test-Suite testsuite

  type:             exitcode-stdio-1.0

  main-is:          Test.hs

  hs-source-dirs:   src

  ghc-options:      -Wall
                    -Wincomplete-patterns

  build-depends:    base                >=4.7 && <5
                  , tasty-quickcheck
  other-modules:

  default-language: Haskell2010